adopt to jiotty 2.3.0